// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Action 1`] = `
<div
  style={
    Object {
      "background": "#f9f9f9",
      "padding": "40px",
    }
  }
>
  <button
    className="Action ant-btn-lg"
    disabled={false}
    onClick={[Function]}
    style={Object {}}
  >
    Transfer
  </button>
</div>
`;

exports[`Storyshots Button Closable topic 1`] = `
<div
  style={
    Object {
      "background": "#f9f9f9",
      "padding": "40px",
    }
  }
>
  <a
    className="Topic"
    href="/trending/travel"
    onClick={[Function]}
  >
    travel
    <i
      className="iconfont icon-close Topic__close"
      onClick={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      role="presentation"
    />
  </a>
</div>
`;

exports[`Storyshots Button Favored topic 1`] = `
<div
  style={
    Object {
      "background": "#f9f9f9",
      "padding": "40px",
    }
  }
>
  <a
    className="Topic Topic--favorite"
    href="/trending/photography"
    onClick={[Function]}
  >
    photography
  </a>
</div>
`;

exports[`Storyshots Button Follow 1`] = `
<div
  style={
    Object {
      "background": "#f9f9f9",
      "padding": "40px",
    }
  }
>
  <button
    className="Follow"
    onClick={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    Follow
  </button>
</div>
`;

exports[`Storyshots Button Followed 1`] = `
<div
  style={
    Object {
      "background": "#f9f9f9",
      "padding": "40px",
    }
  }
>
  <button
    className="Follow"
    onClick={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    Following
  </button>
</div>
`;

exports[`Storyshots Button Topic 1`] = `
<div
  style={
    Object {
      "background": "#f9f9f9",
      "padding": "40px",
    }
  }
>
  <a
    className="Topic"
    href="/trending/travel"
    onClick={[Function]}
  >
    travel
  </a>
</div>
`;

exports[`Storyshots Comments Comments 1`] = `
<div
  style={
    Object {
      "background": "#f9f9f9",
      "padding": "40px",
    }
  }
>
  <div
    className="Comments"
  >
    <div
      className="Comments__header"
    >
      <h2>
        <span>
          Comments
        </span>
      </h2>
      <div
        className="Comments__header__sort"
        onClick={[Function]}
        role="presentation"
      >
        <a
          className="active"
          data-type="BEST"
        >
          <span>
            Best
          </span>
        </a>
        <a
          className=""
          data-type="NEWEST"
        >
          <span>
            Newest
          </span>
        </a>
        <a
          className=""
          data-type="OLDEST"
        >
          <span>
            Oldest
          </span>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Editor Editor 1`] = `
<div
  style={
    Object {
      "background": "#f9f9f9",
      "padding": "40px",
    }
  }
>
  <form
    className="ant-form ant-form-vertical Editor"
    onSubmit={[Function]}
  >
    <div
      className="ant-row ant-form-item"
      style={undefined}
    >
      <div
        className="ant-form-item-label"
      >
        <label
          className="ant-form-item-required"
          htmlFor="title"
          onClick={[Function]}
          title=""
        >
          <span
            className="Editor__label"
          >
            <span>
              Title
            </span>
          </span>
        </label>
      </div>
      <div
        className="ant-form-item-control-wrapper"
      >
        <div
          className="ant-form-item-control "
        >
          <input
            className="ant-input ant-input-lg Editor__title"
            data-__meta={
              Object {
                "leadingName": "title",
                "name": "title",
                "originalProps": Object {
                  "className": "Editor__title",
                  "disabled": false,
                  "onChange": [Function],
                  "placeholder": "Add title",
                  "prefixCls": "ant-input",
                  "type": "text",
                },
                "ref": [Function],
                "rules": Array [
                  Object {
                    "message": "Please enter a title.",
                    "required": true,
                  },
                  Object {
                    "max": 255,
                    "message": "Title can't be longer than 255 characters.",
                  },
                ],
                "trigger": "onChange",
                "validate": Array [
                  Object {
                    "rules": Array [
                      Object {
                        "message": "Please enter a title.",
                        "required": true,
                      },
                      Object {
                        "max": 255,
                        "message": "Title can't be longer than 255 characters.",
                      },
                    ],
                    "trigger": Array [
                      "onChange",
                    ],
                  },
                ],
                "valuePropName": "value",
              }
            }
            disabled={false}
            id="title"
            onChange={[Function]}
            onKeyDown={[Function]}
            placeholder="Add title"
            size="large"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      className="ant-row ant-form-item"
      style={undefined}
    >
      <div
        className="ant-form-item-label"
      >
        <label
          className="ant-form-item-required"
          htmlFor="topics"
          onClick={[Function]}
          title=""
        >
          <span
            className="Editor__label"
          >
            <span>
              Topics
            </span>
          </span>
        </label>
      </div>
      <div
        className="ant-form-item-control-wrapper"
      >
        <div
          className="ant-form-item-control has-success"
        >
          <div
            className="ant-form-extra"
          >
            Separate topics with commas. Only lowercase letters, numbers and hyphen character is permitted.
          </div>
        </div>
      </div>
    </div>
    <div
      className="ant-row ant-form-item"
      style={undefined}
    >
      <div
        className="ant-form-item-control-wrapper"
      >
        <div
          className="ant-form-item-control "
        >
          <div
            className="EditorToolbar"
          >
            <button
              className="ant-btn EditorToolbar__button ant-dropdown-trigger"
              disabled={undefined}
              onBlur={undefined}
              onClick={[Function]}
              onFocus={undefined}
              onMouseDown={undefined}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onTouchStart={undefined}
              type="button"
            >
              <i
                className="iconfont icon-fontsize"
              />
              <span>
                 
              </span>
              <i
                className="anticon anticon-down"
              />
            </button>
            <button
              className="ant-btn EditorToolbar__button"
              onBlur={undefined}
              onClick={[Function]}
              onFocus={undefined}
              onMouseDown={undefined}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onTouchStart={undefined}
              type="button"
            >
              <i
                className="iconfont icon-bold"
              />
            </button>
            <button
              className="ant-btn EditorToolbar__button"
              onBlur={undefined}
              onClick={[Function]}
              onFocus={undefined}
              onMouseDown={undefined}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onTouchStart={undefined}
              type="button"
            >
              <i
                className="iconfont icon-italic"
              />
            </button>
            <button
              className="ant-btn EditorToolbar__button"
              onBlur={undefined}
              onClick={[Function]}
              onFocus={undefined}
              onMouseDown={undefined}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onTouchStart={undefined}
              type="button"
            >
              <i
                className="iconfont icon-q1"
              />
            </button>
            <button
              className="ant-btn EditorToolbar__button"
              onBlur={undefined}
              onClick={[Function]}
              onFocus={undefined}
              onMouseDown={undefined}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onTouchStart={undefined}
              type="button"
            >
              <i
                className="iconfont icon-link"
              />
            </button>
            <button
              className="ant-btn EditorToolbar__button"
              onBlur={undefined}
              onClick={[Function]}
              onFocus={undefined}
              onMouseDown={undefined}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onTouchStart={undefined}
              type="button"
            >
              <i
                className="iconfont icon-picture"
              />
            </button>
          </div>
          <div
            className="Editor__dropzone-base"
          />
          <p
            className="Editor__imagebox"
          >
            <input
              accept="image/*"
              id="inputfile"
              onChange={[Function]}
              type="file"
            />
            <label
              htmlFor="inputfile"
            >
              <i
                className="iconfont icon-picture"
              />
              <span>
                Select image or paste it from the clipboard.
              </span>
            </label>
          </p>
        </div>
      </div>
    </div>
    
    <div
      className="ant-row ant-form-item"
      style={undefined}
    >
      <div
        className="ant-form-item-label"
      >
        <label
          className=""
          htmlFor="reward"
          onClick={[Function]}
          title=""
        >
          <span
            className="Editor__label"
          >
            <span>
              Reward
            </span>
          </span>
        </label>
      </div>
      <div
        className="ant-form-item-control-wrapper"
      >
        <div
          className="ant-form-item-control has-success"
        />
      </div>
    </div>
    <div
      className="ant-row ant-form-item"
      style={undefined}
    >
      <div
        className="ant-form-item-control-wrapper"
      >
        <div
          className="ant-form-item-control has-success"
        >
          <label
            className="ant-checkbox-wrapper"
            onMouseEnter={undefined}
            onMouseLeave={undefined}
            style={undefined}
          >
            <span
              className="ant-checkbox ant-checkbox-checked"
              style={Object {}}
            >
              <input
                checked={true}
                className="ant-checkbox-input"
                data-__meta={
                  Object {
                    "initialValue": true,
                    "leadingName": "upvote",
                    "name": "upvote",
                    "originalProps": Object {
                      "children": <FormattedMessage
                        defaultMessage="Like this post"
                        id="like_post"
                        values={Object {}}
                      />,
                      "disabled": false,
                      "indeterminate": false,
                      "onChange": [Function],
                      "prefixCls": "ant-checkbox",
                    },
                    "ref": null,
                    "trigger": "onChange",
                    "validate": Array [],
                    "valuePropName": "checked",
                  }
                }
                disabled={false}
                name={undefined}
                onBlur={[Function]}
                onChange={[Function]}
                onClick={undefined}
                onFocus={[Function]}
                readOnly={undefined}
                tabIndex={undefined}
                type="checkbox"
              />
              <span
                className="ant-checkbox-inner"
              />
            </span>
            <span>
              <span>
                Like this post
              </span>
            </span>
          </label>
        </div>
      </div>
    </div>
    <div
      className="Editor__bottom"
    >
      <span
        className="Editor__bottom__info"
      >
        <i
          className="iconfont icon-markdown"
        />
         
        <span>
          Styling with markdown supported
        </span>
      </span>
      <div
        className="Editor__bottom__right"
      >
        <div
          className="ant-row ant-form-item Editor__bottom__cancel"
          style={undefined}
        >
          <div
            className="ant-form-item-control-wrapper"
          >
            <div
              className="ant-form-item-control "
            >
              <button
                className="ant-btn ant-btn-danger ant-btn-lg"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span>
                  Delete this draft
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          className="ant-row ant-form-item Editor__bottom__submit"
          style={undefined}
        >
          <div
            className="ant-form-item-control-wrapper"
          >
            <div
              className="ant-form-item-control "
            >
              <button
                className="Action ant-btn-lg Action--primary"
                disabled={false}
                onClick={[Function]}
                style={Object {}}
              >
                Post
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Storyshots Navigation Sidenav 1`] = `
<div
  style={
    Object {
      "background": "#f9f9f9",
      "padding": "40px",
    }
  }
>
  <div>
    <ul
      className="Sidenav"
    >
      <li>
        <a
          aria-current={false}
          className={undefined}
          href="/@guest123"
          onClick={[Function]}
          style={undefined}
        >
          <i
            className="iconfont icon-mine"
          />
          <span>
            My profile
          </span>
        </a>
      </li>
      <li>
        <a
          aria-current="true"
          className="Sidenav__item--active"
          href="/"
          onClick={[Function]}
          style={Object {}}
        >
          <i
            className="iconfont icon-clock"
          />
          <span>
            Feed
          </span>
        </a>
      </li>
      <li>
        <a
          aria-current={false}
          className={undefined}
          href="/trending"
          onClick={[Function]}
          style={undefined}
        >
          <i
            className="iconfont icon-headlines"
          />
          <span>
            News
          </span>
        </a>
      </li>
      <li>
        <a
          aria-current={false}
          className={undefined}
          href="/wallet"
          onClick={[Function]}
          style={undefined}
        >
          <i
            className="iconfont icon-wallet"
          />
          <span>
            Wallet
          </span>
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Navigation Topnav logged 1`] = `
<div
  style={
    Object {
      "background": "#f9f9f9",
      "padding": "40px",
    }
  }
>
  <div
    className="Topnav"
  >
    <div
      className="topnav-layout container"
    >
      <div
        className="left"
      >
        <a
          className="Topnav__brand"
          href="/"
          onClick={[Function]}
        >
          busy
        </a>
        <span
          className="Topnav__version"
        >
          beta
        </span>
      </div>
      <div
        className="center"
      >
        <div
          className="Topnav__input-container"
        >
          <input
            className="ant-input"
            disabled={false}
            onKeyDown={[Function]}
            placeholder="Search..."
            type="text"
          />
          <i
            className="iconfont icon-search"
          />
        </div>
      </div>
      <div
        className="right"
      >
        <div
          className="Topnav__menu-container"
        >
          <ul
            aria-activedescendant=""
            className="ant-menu ant-menu-horizontal Topnav__menu-container__menu ant-menu-light ant-menu-root"
            onKeyDown={[Function]}
            role="menu"
            style={Object {}}
            tabIndex="0"
          >
            <li
              aria-disabled={undefined}
              aria-selected={false}
              className="ant-menu-item"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="menuitem"
              style={Object {}}
              title={undefined}
            >
              <a
                className="Topnav__link"
                href="/write"
                onBlur={undefined}
                onClick={[Function]}
                onFocus={undefined}
                onMouseDown={undefined}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onTouchStart={undefined}
              >
                <i
                  className="iconfont icon-write"
                />
              </a>
            </li>
            <li
              aria-disabled={undefined}
              aria-selected={false}
              className="ant-menu-item Topnav__item-user"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="menuitem"
              style={Object {}}
              title={undefined}
            >
              <a
                className="Topnav__user"
                href="/@guest123"
                onClick={[Function]}
              >
                <img
                  alt="guest123"
                  className="Avatar"
                  onError={[Function]}
                  src="https://img.busy.org/@guest123?s=36"
                  style={
                    Object {
                      "height": "36px",
                      "minWidth": "36px",
                      "width": "36px",
                    }
                  }
                />
                <span
                  className="Topnav__user__username"
                >
                  guest123
                </span>
              </a>
            </li>
            <li
              aria-disabled={undefined}
              aria-selected={false}
              className="ant-menu-item Topnav__item--badge"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="menuitem"
              style={Object {}}
              title={undefined}
            >
              <a
                className="Topnav__link Topnav__link--light"
                onBlur={undefined}
                onClick={[Function]}
                onFocus={undefined}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onTouchStart={[Function]}
              >
                <span
                  className="ant-badge"
                >
                  <i
                    className="iconfont icon-remind"
                  />
                </span>
              </a>
            </li>
            <li
              aria-disabled={undefined}
              aria-selected={false}
              className="ant-menu-item"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="menuitem"
              style={Object {}}
              title={undefined}
            >
              <a
                className="Topnav__link Topnav__link--light"
                onBlur={undefined}
                onClick={[Function]}
                onFocus={undefined}
                onMouseDown={[Function]}
                onMouseEnter={undefined}
                onMouseLeave={undefined}
                onTouchStart={[Function]}
              >
                <i
                  className="iconfont icon-switch"
                />
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Navigation Topnav unlogged 1`] = `
<div
  style={
    Object {
      "background": "#f9f9f9",
      "padding": "40px",
    }
  }
>
  <div
    className="Topnav"
  >
    <div
      className="topnav-layout container"
    >
      <div
        className="left"
      >
        <a
          className="Topnav__brand"
          href="/"
          onClick={[Function]}
        >
          busy
        </a>
        <span
          className="Topnav__version"
        >
          beta
        </span>
      </div>
      <div
        className="center"
      >
        <div
          className="Topnav__input-container"
        >
          <input
            className="ant-input"
            disabled={false}
            onKeyDown={[Function]}
            placeholder="Search..."
            type="text"
          />
          <i
            className="iconfont icon-search"
          />
        </div>
      </div>
      <div
        className="right"
      >
        <div
          className="Topnav__menu-container"
        >
          <ul
            aria-activedescendant=""
            className="ant-menu ant-menu-horizontal Topnav__menu-container__menu ant-menu-light ant-menu-root"
            onKeyDown={[Function]}
            role="menu"
            style={Object {}}
            tabIndex="0"
          >
            <li
              aria-disabled={undefined}
              aria-selected={false}
              className="ant-menu-item"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="menuitem"
              style={Object {}}
              title={undefined}
            >
              <a
                href="https://steemit.com/pick_account"
                rel="noopener noreferrer"
                target="_blank"
              >
                <span>
                  Sign up
                </span>
              </a>
            </li>
            <li
              aria-disabled={true}
              aria-selected={false}
              className="ant-menu-item-disabled ant-menu-item"
              role="menuitem"
              style={Object {}}
              title={undefined}
            >
              |
            </li>
            <li
              aria-disabled={undefined}
              aria-selected={false}
              className="ant-menu-item"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="menuitem"
              style={Object {}}
              title={undefined}
            >
              <a
                href="https://v2.steemconnect.com/oauth2/authorize?client_id=&redirect_uri=&scope=&state=blank"
              >
                <span>
                  Log in
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Profile UserHeader 1`] = `
<div
  style={
    Object {
      "background": "#f9f9f9",
      "padding": "40px",
    }
  }
>
  <div
    className="UserHeader"
    style={
      Object {
        "backgroundImage": "url(\\"https://img.busy.org/@roelandp/cover\\")",
      }
    }
  >
    <div
      className="UserHeader__container"
    >
      <img
        alt="roelandp"
        className="Avatar"
        onError={[Function]}
        src="https://img.busy.org/@roelandp?s=100"
        style={
          Object {
            "height": "100px",
            "minWidth": "100px",
            "width": "100px",
          }
        }
      />
      <div
        className="UserHeader__user"
      >
        <div
          className="UserHeader__row"
        >
          <h2
            className="UserHeader__user__username"
          >
            roelandp
          </h2>
          <div
            className="UserHeader__user__button"
          />
          <i
            className="iconfont icon-more UserHeader__more"
            onBlur={undefined}
            onClick={[Function]}
            onFocus={undefined}
            onMouseDown={[Function]}
            onMouseEnter={undefined}
            onMouseLeave={undefined}
            onTouchStart={[Function]}
          />
        </div>
        <div
          className="UserHeader__handle-rank-container"
        >
          <div
            className="UserHeader__row UserHeader__handle"
          >
            @
            roelandp
          </div>
          <div
            className="UserHeader__rank"
          >
            <i
              className="iconfont icon-ranking"
            />
            <span>
              Plankton
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Profile UserMenu 1`] = `
<div
  style={
    Object {
      "background": "#f9f9f9",
      "padding": "40px",
    }
  }
>
  <div
    className="UserMenu"
  >
    <div
      className="container menu-layout"
    >
      <div
        className="left"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Sidebar Favorite topics 1`] = `
<div
  style={
    Object {
      "background": "#f9f9f9",
      "padding": "40px",
    }
  }
>
  <div
    className="Topics"
  >
    <h4>
      <span>
        Favorite topics
      </span>
    </h4>
    <ul
      className="Topics__list"
    >
      <li>
        <a
          className="Topic Topic--favorite"
          href="/trending/funny"
          onClick={[Function]}
        >
          funny
        </a>
      </li>
      <li>
        <a
          className="Topic Topic--favorite"
          href="/trending/history"
          onClick={[Function]}
        >
          history
        </a>
      </li>
      <li>
        <a
          className="Topic Topic--favorite"
          href="/trending/nature"
          onClick={[Function]}
        >
          nature
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Sidebar Interesting People 1`] = `
<div
  style={
    Object {
      "background": "#f9f9f9",
      "padding": "40px",
    }
  }
>
  <div
    className="InterestingPeople"
  >
    <div
      className="InterestingPeople__container"
    >
      <h4
        className="InterestingPeople__title"
      >
        <i
          className="iconfont icon-group InterestingPeople__icon"
        />
         
        <span>
          Interesting People
        </span>
        <i
          className="iconfont icon-refresh InterestingPeople__icon-refresh"
          onClick={[Function]}
          role="presentation"
        />
      </h4>
      <div
        className="InterestingPeople__divider"
      />
      <div
        className="User"
      >
        <div
          className="User__top"
        >
          <div
            className="User__links"
          >
            <a
              href="/@liondani"
              onClick={[Function]}
            >
              <img
                alt="liondani"
                className="Avatar"
                onError={[Function]}
                src="https://img.busy.org/@liondani?s=34"
                style={
                  Object {
                    "height": "34px",
                    "minWidth": "34px",
                    "width": "34px",
                  }
                }
              />
            </a>
            <a
              href="/@liondani"
              onClick={[Function]}
            >
              <span
                className="User__name"
              >
                liondani
              </span>
            </a>
          </div>
        </div>
        <div
          className="User__divider"
        />
      </div>
      <div
        className="User"
      >
        <div
          className="User__top"
        >
          <div
            className="User__links"
          >
            <a
              href="/@good-karma"
              onClick={[Function]}
            >
              <img
                alt="good-karma"
                className="Avatar"
                onError={[Function]}
                src="https://img.busy.org/@good-karma?s=34"
                style={
                  Object {
                    "height": "34px",
                    "minWidth": "34px",
                    "width": "34px",
                  }
                }
              />
            </a>
            <a
              href="/@good-karma"
              onClick={[Function]}
            >
              <span
                className="User__name"
              >
                good-karma
              </span>
            </a>
          </div>
        </div>
        <div
          className="User__divider"
        />
      </div>
      <div
        className="User"
      >
        <div
          className="User__top"
        >
          <div
            className="User__links"
          >
            <a
              href="/@furion"
              onClick={[Function]}
            >
              <img
                alt="furion"
                className="Avatar"
                onError={[Function]}
                src="https://img.busy.org/@furion?s=34"
                style={
                  Object {
                    "height": "34px",
                    "minWidth": "34px",
                    "width": "34px",
                  }
                }
              />
            </a>
            <a
              href="/@furion"
              onClick={[Function]}
            >
              <span
                className="User__name"
              >
                furion
              </span>
            </a>
          </div>
        </div>
        <div
          className="User__divider"
        />
      </div>
      <h4
        className="InterestingPeople__more"
      >
        <a
          href="/latest-comments"
          onClick={[Function]}
        >
          <span>
            Discover More People
          </span>
        </a>
      </h4>
    </div>
  </div>
</div>
`;

exports[`Storyshots Sidebar Latest Comments 1`] = `
<div
  style={
    Object {
      "background": "#f9f9f9",
      "padding": "40px",
    }
  }
>
  <div
    className="LatestComments"
  >
    <div
      className="LatestComments__container"
    >
      <h4
        className="LatestComments__title"
      >
        <i
          className="iconfont icon-time LatestComments__icon"
        />
         
        <span>
          Latest Comments
        </span>
      </h4>
      <div
        className="LatestComments__divider"
      />
      <div
        className="Comment"
      >
        <div
          className="Comment__text"
        >
          <div
            className="Comment__content"
          >
            <div
              className=""
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Great stuff. Looking forward to it. Although, here are a few things I feel we n…",
                }
              }
            />
          </div>
          <div
            className="Comment__footer"
          >
            <a
              className="LatestComment__author"
              href="/@ekitcho"
              onClick={[Function]}
            >
              ekitcho
            </a>
            <span
              className="LatestComment__bullet"
            />
            <span
              className="LatestComment__date"
            >
              <span>
                29 days ago
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        className="Comment"
      >
        <div
          className="Comment__text"
        >
          <div
            className="Comment__content"
          >
            <div
              className=""
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Thank you so much for sharing this post
",
                }
              }
            />
          </div>
          <div
            className="Comment__footer"
          >
            <a
              className="LatestComment__author"
              href="/@fabien"
              onClick={[Function]}
            >
              fabien
            </a>
            <span
              className="LatestComment__bullet"
            />
            <span
              className="LatestComment__date"
            >
              <span>
                29 days ago
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        className="Comment"
      >
        <div
          className="Comment__text"
        >
          <div
            className="Comment__content"
          >
            <div
              className=""
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Ahh, I wish I heard that earlier
",
                }
              }
            />
          </div>
          <div
            className="Comment__footer"
          >
            <a
              className="LatestComment__author"
              href="/@itsyogesh"
              onClick={[Function]}
            >
              itsyogesh
            </a>
            <span
              className="LatestComment__bullet"
            />
            <span
              className="LatestComment__date"
            >
              <span>
                29 days ago
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        className="LatestComments__divider"
      />
      <h4
        className="LatestComments__more"
      >
        <a
          href="/latest-comments"
          onClick={[Function]}
        >
          <span>
            See All Comments
          </span>
        </a>
      </h4>
    </div>
  </div>
</div>
`;

exports[`Storyshots Sidebar Start now 1`] = `
<div
  style={
    Object {
      "background": "#f9f9f9",
      "padding": "40px",
    }
  }
>
  <div
    className="SidebarBlock"
  >
    <h3
      className="SidebarBlock__title"
    >
      <span>
        Never written a post?
      </span>
    </h3>
    <a
      href="/write"
      onClick={[Function]}
    >
      <button
        className="SidebarBlock__button"
      >
        <span>
          Start Now
        </span>
      </button>
    </a>
  </div>
</div>
`;

exports[`Storyshots Sidebar Trending topics 1`] = `
<div
  style={
    Object {
      "background": "#f9f9f9",
      "padding": "40px",
    }
  }
>
  <div
    className="Topics"
  >
    <h4>
      <span>
        Trending topics
      </span>
    </h4>
    <ul
      className="Topics__list"
    >
      <li>
        <a
          className="Topic"
          href="/trending/photography"
          onClick={[Function]}
        >
          photography
        </a>
      </li>
      <li>
        <a
          className="Topic"
          href="/trending/steemit"
          onClick={[Function]}
        >
          steemit
        </a>
      </li>
      <li>
        <a
          className="Topic"
          href="/trending/introduceyourself"
          onClick={[Function]}
        >
          introduceyourself
        </a>
      </li>
      <li>
        <a
          className="Topic"
          href="/trending/steem"
          onClick={[Function]}
        >
          steem
        </a>
      </li>
      <li>
        <a
          className="Topic"
          href="/trending/story"
          onClick={[Function]}
        >
          story
        </a>
      </li>
    </ul>
    <h5
      onClick={[Function]}
      role="presentation"
    >
      <span>
        View more
      </span>
    </h5>
  </div>
</div>
`;

exports[`Storyshots Story Full story 1`] = `
<div
  style={
    Object {
      "background": "#f9f9f9",
      "padding": "40px",
    }
  }
>
  <div
    className="StoryFull"
  >
    <h1
      className="StoryFull__title"
    >
      The Cryptoeconomy Rally
    </h1>
    <h3
      className="StoryFull__comments_title"
    >
      <a
        href="#comments"
      >
        <span>
          58 comments
        </span>
      </a>
    </h3>
    <div
      className="StoryFull__header"
    >
      <a
        href="/@bitspace"
        onClick={[Function]}
      >
        <img
          alt="bitspace"
          className="Avatar"
          onError={[Function]}
          src="https://img.busy.org/@bitspace?s=60"
          style={
            Object {
              "height": "60px",
              "minWidth": "60px",
              "width": "60px",
            }
          }
        />
      </a>
      <div
        className="StoryFull__header__text"
      >
        <a
          href="/@bitspace"
          onClick={[Function]}
        >
          bitspace
        </a>
        <span
          className="StoryFull__header__text__date"
          onBlur={undefined}
          onClick={undefined}
          onFocus={undefined}
          onMouseDown={undefined}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={undefined}
        >
          <span>
            29 days ago
          </span>
        </span>
      </div>
      <i
        className="iconfont icon-more StoryFull__header__more"
        onBlur={undefined}
        onClick={[Function]}
        onFocus={undefined}
        onMouseDown={[Function]}
        onMouseEnter={undefined}
        onMouseLeave={undefined}
        onTouchStart={[Function]}
      />
    </div>
    <div
      onClick={[Function]}
      role="presentation"
    >
      <div
        className="Body Body--full"
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p><center><img src=\\"https://steemitimages.com/0x0/http://www.kiplinger.com/kipimages/pages/15396.jpg\\" /></center></p>
<p>The recent growth in the cryptocurrency market has been breathtaking. In less than two months, the price of Bitcoin has doubled, but compared to many other cryptocurrencies, Bitcoin has almost been standing still. Since the altcoin rally started picking up the pace in mid-March, several major blockchain tokens have risen in value more than one thousand percent. Most notably Ripple (XRP), valued at $0.005 (half a cent) in the beginning of March, rose almost 10,000 % to a high of $0.42 (42 cent) on the 17th of May, seeing its total market cap surpassing 16 billion dollars on that day. If that was not enough, the cryptocurrencies Stratis and DigiByte received the public’s attention even more recently, reaching staggering price gains of 10,000 % and 20,000 %, respectively, from only three months prior.</p>
<p><img src=\\"https://steemitimages.com/0x0/https://i.imgsafe.org/7ad0b784fd.png\\" /><br />
(source: coinmarketcap.com)</p>
<p>The staggering rise in price has obviously created massive attention towards the cryptocurrency space, and the massive coverage in turn creates even more demand this modern asset. In this article, we will take a closer look at some of the key factors behind the latest overwhelming increase in value.</p>
<h3>A brand new asset class</h3>
<p>The cryptocurrency market comprises different types of projects, with Bitcoin being the cornerstone. However, it is being challenged by an increasing number of new projects. Among these are other types of coins which focus on anonymity, storage distribution, solar energy and transaction capacity to name a few. There is also a new trend with startups issuing their own cryptocurrency or blockchain token, in addition to or instead of a traditional company share, when crowdfunding new projects.</p>
<p><img src=\\"https://steemitimages.com/0x0/https://i.imgsafe.org/7adf806323.png\\" /><br />
(source: cryptocurrencybitcoinnews.com)</p>
<p>Many of these cryptocurrencies are offered through so called ICOs (Initial Coin Offerings), similar to IPOs (Initial Public Offerings). Rather than shares, the company issues a cryptocurrency, which is often linked to the company’s own blockchain or decentralized application (Dapp). Another term for ICO is ITO (Initial Token Offering), but ICO is most commonly used. A “share” issued as a cryptocurrency is significantly more liquid than a traditional share since it can be easily traded as a currency. It is as if our paper bills were actual securities and we used Apple stocks as a medium exchange in the grocery store. Thus, many of these cryptocurrencies can be considered to be something in between financial instrument (security) and currency/money.</p>
<p>One of the most important differences between traditional financial instruments and cryptocurrencies/blockchain tokens is the extreme low barrier of entry. The world of crypto finance is almost completely unregulated across the planet. For instance, there are strict requirements in the United States to become an accredited investor. On the ICO market, however, there are no restrictions for retail investors as to how much one can invest in startup projects. This is because the cryptocurrencies do not have the status of financial instruments. Thus, the “stocks” can be traded freely without brokerage, fees, contracts or KYC requirement procedures, to name a few.</p>
<h3>An insight into the liquid nature of cryptocurrencies</h3>
<p>There is an ongoing race for developing solutions that facilitate Bitcoin/fiat currency trades. For the average person, acquiring Bitcoin can still be seen as a bit of a hassle. However, once you own Bitcoin, all of the other cryptocurrencies become readily accessible. It is very easy to transfer Bitcoin to trading platforms such as Poloniex and Bittrex, on which there is an unlimited supply and where trades can be executed almost without transaction fees.</p>
<p>The alternative cryptocurrencies (altcoins) are experiencing extreme runs and dips in price. However, this is nothing new in the world of Bitcoin. From being worth just a few cents back in its early days (2009/2010), Bitcoin has gone through several hype cycles seeing its value increase by orders of magnitude in the course of days or weeks. In relative measures, this year’s price increase of 100-200 % is not particularly sensational in Bitcoin standards. Bitcoin’s volatility index is decreasing steadily, and day-to-day changes above 10 % are now rare.</p>
<p><img src=\\"https://steemitimages.com/0x0/https://i.imgsafe.org/7aef0da102.png\\" /></p>
<p>Enormous price movements in altcoins, however, do occur frequently, and the minds of people who regularly use the exchanges may be subject to desensitization. While daily moves of 10, 15, 20 % are considered dramatic on traditional stock exchanges, these numbers are nothing to get excited about in the crypto space. A token doubling its value in 24 hours is not particularly noteworthy. Over the last few years, with an increased frequency there have been coins shooting up several 100 % in just a matter of hours. In this highly volatile market, Bitcoin thus becomes the “boring” cryptocurrency that is the least attractive to speculation since it is the most stable one.</p>
<p><img src=\\"https://steemitimages.com/0x0/https://i.imgsafe.org/7af195d454.png\\" /></p>
<p>In this very early cryptocurrency phase, which is regularly compared to the internet in the early ‘90s, traders get incentivized by the low friction to spread their money across several cryptocurrency projects in the hope that maybe one of them goes viral. The cryptoeconomy is like a global casino where droves of new people from all over the world are continuously pouring in, and everyone is trying to be first in line to the newly opened tables. Tales of people who have earned a thousand times their initial investment lead to a self-perpetuating spiral of greed. In this environment there is not much room for the relatively slow and conservative Bitcoin.</p>
<p><img src=\\"https://steemitimages.com/0x0/https://i.imgsafe.org/7af5428cf9.png\\" /></p>
<p>If one regularly checks in on the various cryptocurrencies and how they trade on exchanges, we typically find daily increases of 10 % or more, creating an expectation that this kind of volatility is normal. As long as most of the numbers remain green, the self-selected youth who like high-risk investments become even less risk averse and move into trades with even higher risk, at a faster pace. The boredom of “low-yield Bitcoin” and the hunger for newer, faster and riskier investments, frictionlessly pushes money over the low barrier into ever more risky cryptocurrencies. At the time of writing, over 250 different cryptocurrencies are valued at over 1 million dollars.</p>
<h3>Cryptocurrency in a global context</h3>
<p>So far, we have explained cryptocurrency as a new type of asset class and how it is characterized by its extreme liquidity. But how does one explain why the market has skyrocketed in the past 6-12 months? In a global, unregulated market such as the Bitcoin market, no one can give a clear, unambiguous answer, but there are probably several factors at play. One is that, during the course of the year, Bitcoin has achieved recognition from governments in a number of countries, including Japan, where in April, the authorities stated that the currency is now to be regarded as a legal payment method.</p>
<p><img src=\\"https://steemitimages.com/0x0/https://i.imgsafe.org/7afbc5aacb.png\\" /></p>
<p>The announcement was immediately followed by a large spike in the price. During the following weeks, the sharp rise in the demand for Bitcoin in Japan caused the trading volume in JPY to  match the USD volume. In Norway as well, the year started out well for Bitcoin, when the tax authorities officially removed sales tax from Bitcoin, similar to EU regulations.</p>
<p>As mentioned earlier, blockchain technology is now said to be at the same stage as the Internet was back in the early ‘90s. At the moment ever more ICOs are launched, and and many consider purchasing blockchain stocks as once in a lifetime opportunities. We all know how the dot-com story played out, but still the market was bigger after the bubble burst than only three-four years before, not to mention that the technology-based Nasdaq Composite index as of today is higher than it was back at its high in the 2000 rally. It is not unthinkable that blockchain will go through a similar cycle, with a giant wave-top hitting in the not too distant future.</p>
<p><img src=\\"https://steemitimages.com/0x0/https://i.imgsafe.org/7b11aa9d92.jpg\\" /></p>
<p>Moreover, Austrian School economists predict that today's debt-based monetary system is not sustainable and that a major global currency crisis will occur by the end of the decade. This is referred to by the passionate, precious metal enthusiast Mike Maloney as the biggest wealth transfer in history. It is expected that the faith in money issued by central banks will drastically fade away, as attempts are made to prop up the economy by interest rate stimulus as well as the purchase of government debt (quantitative easing), by creating ever more money out of thin air. Gold and silver are predicted to play a key role in this transition, and since Bitcoin is limited in its amount in addition to being outside the financial system, many people think Bitcoin will become a safe haven asset when the market tumbles.</p>
<p>Additionally, the limited supply makes Bitcoin a so-called deflationary currency, where the value per unit does not diminish over time, in contrast to today’s traditional inflationary currencies. As unprecedented low interest-rate policies have seem to become the new normal, it is difficult to find savings rates that exceed the rate of inflation. People who do not want immediate consumption, but who would prefer to save their money, are thus incentivized to get their money out of their savings accounts and into something. Real estate investments have traditionally been a safe bet, but housing bubbles tend to burst eventually. 2017 has also been an incredible year for global stock markets, but it is hard to say how long this can go on. Overall it is not entirely clear where one can place one’s money in the traditional market without taking a significant risk. With the current monetary policy, where market bubbles are abundant, money is withdrawn from savings accounts and placed wherever it might grow instead of eroding further. Thus, there is reason to believe people are considering Bitcoin as a viable saving strategy.</p>
<h3>Conclusion</h3>
<p>It is difficult to know just how early or late we are in the current cryptocurrency hype cycle. The question is: Are we already in a bubble, or is the recent run-up only a small foreshock of what is about to unfold?</p>
<p>The last weekend of May saw the first significant correction to the mind-blowing run-up that has been going on since March. However, considering the solid rebound the following week, it seems to have been just a quick breather. It is important to remember that the combined market cap of all cryptocurrencies is still only a drop in the ocean in the scale of global finance, and after 8 years, most people have barely heard of Bitcoin. In that respect, it is difficult to determine a ceiling for this market. Yet, as an investor, one must be aware of the high risk associated with trading cryptocurrencies; there is no guarantee they will survive their infancy and mature into established societal institutions.</p>",
            }
          }
        />
      </div>
    </div>
    <div
      className="StoryFull__topics"
    >
      <a
        className="Topic"
        href="/trending/bitcoin"
        onClick={[Function]}
      >
        bitcoin
      </a>
      <a
        className="Topic"
        href="/trending/market"
        onClick={[Function]}
      >
        market
      </a>
      <a
        className="Topic"
        href="/trending/cryptocurrency"
        onClick={[Function]}
      >
        cryptocurrency
      </a>
      <a
        className="Topic"
        href="/trending/cryptoeconomy"
        onClick={[Function]}
      >
        cryptoeconomy
      </a>
      <a
        className="Topic"
        href="/trending/price"
        onClick={[Function]}
      >
        price
      </a>
    </div>
    <div
      className="StoryFooter"
    >
      <div
        className="StoryFooter__actions"
      >
        <span
          className="Payout"
        >
          <span
            className=""
            onBlur={undefined}
            onClick={undefined}
            onFocus={undefined}
            onMouseDown={undefined}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onTouchStart={undefined}
          >
            <span>
              $111.76
            </span>
          </span>
        </span>
        <div
          className="Buttons"
        >
          <a
            className="Buttons__link"
            onBlur={undefined}
            onClick={[Function]}
            onFocus={undefined}
            onMouseDown={undefined}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onTouchStart={undefined}
            role="presentation"
          >
            <i
              className="iconfont icon-praise_fill"
            />
          </a>
          <span
            className="Buttons__number Buttons__reactions-count"
            onClick={[Function]}
            role="presentation"
          >
            <span
              onBlur={undefined}
              onClick={undefined}
              onFocus={undefined}
              onMouseDown={undefined}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onTouchStart={undefined}
            >
              <span>
                133
              </span>
              <span />
            </span>
          </span>
          <a
            className="Buttons__link"
            href="/bitcoin/@bitspace/the-cryptoeconomy-rally#comments"
            onBlur={undefined}
            onClick={[Function]}
            onFocus={undefined}
            onMouseDown={undefined}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onTouchStart={undefined}
          >
            <i
              className="iconfont icon-message_fill"
            />
          </a>
          <span
            className="Buttons__number"
          >
            <span>
              18
            </span>
          </span>
          <a
            className="Buttons__link"
            onBlur={undefined}
            onClick={[Function]}
            onFocus={undefined}
            onMouseDown={undefined}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onTouchStart={undefined}
            role="presentation"
          >
            <i
              className="iconfont icon-share1 Buttons__share"
            />
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Story Full story with embed 1`] = `
<div
  style={
    Object {
      "background": "#f9f9f9",
      "padding": "40px",
    }
  }
>
  <div
    className="StoryFull"
  >
    <h1
      className="StoryFull__title"
    >
      Ned Scott, CEO of #Steemit Inc. Have a 40 minute conversation with the SteemSpeak.com Community!
    </h1>
    <h3
      className="StoryFull__comments_title"
    >
      <a
        href="#comments"
      >
        <span>
          58 comments
        </span>
      </a>
    </h3>
    <div
      className="StoryFull__header"
    >
      <a
        href="/@fyrstikken"
        onClick={[Function]}
      >
        <img
          alt="fyrstikken"
          className="Avatar"
          onError={[Function]}
          src="https://img.busy.org/@fyrstikken?s=60"
          style={
            Object {
              "height": "60px",
              "minWidth": "60px",
              "width": "60px",
            }
          }
        />
      </a>
      <div
        className="StoryFull__header__text"
      >
        <a
          href="/@fyrstikken"
          onClick={[Function]}
        >
          fyrstikken
        </a>
        <span
          className="StoryFull__header__text__date"
          onBlur={undefined}
          onClick={undefined}
          onFocus={undefined}
          onMouseDown={undefined}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={undefined}
        >
          <span>
            last month
          </span>
        </span>
      </div>
      <i
        className="iconfont icon-more StoryFull__header__more"
        onBlur={undefined}
        onClick={[Function]}
        onFocus={undefined}
        onMouseDown={[Function]}
        onMouseEnter={undefined}
        onMouseLeave={undefined}
        onTouchStart={[Function]}
      />
    </div>
    <div
      onClick={[Function]}
      role="presentation"
    >
      <div
        className="Body Body--full"
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "<h2>Lots of good stuff for STEEM as he talks about Community Tokens / User Issued Tokens &amp; B2B Solutions, the Linear Reward Curve and many other important things you should not miss out on!</h2>
<p>",
            }
          }
        />
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "<iframe width=\\"100%\\" height=\\"400\\" src=\\"//www.youtube.com/embed/YxFzGoDoLwU?autoplay=0\\" frameborder=\\"0\\" scrolling=\\"no\\" allowfullscreen></iframe>",
            }
          }
        />
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "</p>
<p><center><h1>RESTEEM &amp; TWEET</h1></center><br />
<center>Join us at <a href=\\"http://steemspeak.com\\" target=\\"_blank\\" rel=\\"nofollow noopener\\">http://steemspeak.com</a> 24/7 all year and connect with more people</center></p>",
            }
          }
        />
      </div>
    </div>
    <div
      className="StoryFull__topics"
    >
      <a
        className="Topic"
        href="/trending/community-tokens"
        onClick={[Function]}
      >
        community-tokens
      </a>
      <a
        className="Topic"
        href="/trending/witnesses"
        onClick={[Function]}
      >
        witnesses
      </a>
      <a
        className="Topic"
        href="/trending/witness-category"
        onClick={[Function]}
      >
        witness-category
      </a>
      <a
        className="Topic"
        href="/trending/dev"
        onClick={[Function]}
      >
        dev
      </a>
      <a
        className="Topic"
        href="/trending/development"
        onClick={[Function]}
      >
        development
      </a>
    </div>
    <div
      className="StoryFooter"
    >
      <div
        className="StoryFooter__actions"
      >
        <span
          className="Payout"
        >
          <span
            className=""
            onBlur={undefined}
            onClick={undefined}
            onFocus={undefined}
            onMouseDown={undefined}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onTouchStart={undefined}
          >
            <span>
              $737.54
            </span>
          </span>
        </span>
        <div
          className="Buttons"
        >
          <a
            className="Buttons__link"
            onBlur={undefined}
            onClick={[Function]}
            onFocus={undefined}
            onMouseDown={undefined}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onTouchStart={undefined}
            role="presentation"
          >
            <i
              className="iconfont icon-praise_fill"
            />
          </a>
          <span
            className="Buttons__number Buttons__reactions-count"
            onClick={[Function]}
            role="presentation"
          >
            <span
              onBlur={undefined}
              onClick={undefined}
              onFocus={undefined}
              onMouseDown={undefined}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onTouchStart={undefined}
            >
              <span>
                658
              </span>
              <span />
            </span>
          </span>
          <a
            className="Buttons__link"
            href="/community-tokens/@fyrstikken/ned-scott-ceo-of-steemit-inc-have-a-40-minute-conversation-with-the-steemspeak-com-community#comments"
            onBlur={undefined}
            onClick={[Function]}
            onFocus={undefined}
            onMouseDown={undefined}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onTouchStart={undefined}
          >
            <i
              className="iconfont icon-message_fill"
            />
          </a>
          <span
            className="Buttons__number"
          >
            <span>
              57
            </span>
          </span>
          <a
            className="Buttons__link"
            onBlur={undefined}
            onClick={[Function]}
            onFocus={undefined}
            onMouseDown={undefined}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onTouchStart={undefined}
            role="presentation"
          >
            <i
              className="iconfont icon-share1 Buttons__share"
            />
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Story Inline story 1`] = `
<div
  style={
    Object {
      "background": "#f9f9f9",
      "padding": "40px",
    }
  }
>
  <div
    className="Story"
  >
    <div
      className="Story__content"
    >
      <i
        className="iconfont icon-unfold Story__more"
        onBlur={undefined}
        onClick={[Function]}
        onFocus={undefined}
        onMouseDown={[Function]}
        onMouseEnter={undefined}
        onMouseLeave={undefined}
        onTouchStart={[Function]}
      />
      <div
        className="Story__header"
      >
        <a
          href="/@bitspace"
          onClick={[Function]}
        >
          <img
            alt="bitspace"
            className="Avatar"
            onError={[Function]}
            src="https://img.busy.org/@bitspace?s=40"
            style={
              Object {
                "height": "40px",
                "minWidth": "40px",
                "width": "40px",
              }
            }
          />
        </a>
        <div
          className="Story__header__text"
        >
          <a
            href="/@bitspace"
            onClick={[Function]}
          >
            <h4>
              bitspace
            </h4>
          </a>
          <span
            className="Story__date"
            onBlur={undefined}
            onClick={undefined}
            onFocus={undefined}
            onMouseDown={undefined}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onTouchStart={undefined}
          >
            <span>
              29 days ago
            </span>
          </span>
        </div>
        <div
          className="Story__topics"
        >
          <a
            className="Topic"
            href="/trending/bitcoin"
            onClick={[Function]}
          >
            bitcoin
          </a>
        </div>
      </div>
      <div
        className="Story__content"
      >
        <a
          className="Story__content__title"
          href="/bitcoin/@bitspace/the-cryptoeconomy-rally"
          onClick={[Function]}
        >
          <h2>
            The Cryptoeconomy Rally
          </h2>
        </a>
        <a
          className="Story__content__preview"
          href="/bitcoin/@bitspace/the-cryptoeconomy-rally"
          onClick={[Function]}
        >
          <div>
            <div
              className="Story__content__img-container"
            >
              <img
                alt="post"
                src="https://steemitimages.com/600x800/http://www.kiplinger.com/kipimages/pages/15396.jpg"
              />
            </div>
            <div
              className="Story__content__body"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "
The recent growth in the cryptocurrency market has been breathtaking. In less than two months, the price of Bitcoin has doubled, but compa…",
                }
              }
            />
          </div>
        </a>
      </div>
      <div
        className="Story__footer"
      >
        <div
          className="StoryFooter"
        >
          <div
            className="StoryFooter__actions"
          >
            <span
              className="Payout"
            >
              <span
                className=""
                onBlur={undefined}
                onClick={undefined}
                onFocus={undefined}
                onMouseDown={undefined}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onTouchStart={undefined}
              >
                <span>
                  $111.76
                </span>
              </span>
            </span>
            <div
              className="Buttons"
            >
              <a
                className="Buttons__link"
                onBlur={undefined}
                onClick={[Function]}
                onFocus={undefined}
                onMouseDown={undefined}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onTouchStart={undefined}
                role="presentation"
              >
                <i
                  className="iconfont icon-praise_fill"
                />
              </a>
              <span
                className="Buttons__number Buttons__reactions-count"
                onClick={[Function]}
                role="presentation"
              >
                <span
                  onBlur={undefined}
                  onClick={undefined}
                  onFocus={undefined}
                  onMouseDown={undefined}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onTouchStart={undefined}
                >
                  <span>
                    133
                  </span>
                  <span />
                </span>
              </span>
              <a
                className="Buttons__link"
                href="/bitcoin/@bitspace/the-cryptoeconomy-rally#comments"
                onBlur={undefined}
                onClick={[Function]}
                onFocus={undefined}
                onMouseDown={undefined}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onTouchStart={undefined}
              >
                <i
                  className="iconfont icon-message_fill"
                />
              </a>
              <span
                className="Buttons__number"
              >
                <span>
                  18
                </span>
              </span>
              <a
                className="Buttons__link"
                onBlur={undefined}
                onClick={[Function]}
                onFocus={undefined}
                onMouseDown={undefined}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onTouchStart={undefined}
                role="presentation"
              >
                <i
                  className="iconfont icon-share1 Buttons__share"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Story Inline story with embed 1`] = `
<div
  style={
    Object {
      "background": "#f9f9f9",
      "padding": "40px",
    }
  }
>
  <div
    className="Story"
  >
    <div
      className="Story__content"
    >
      <i
        className="iconfont icon-unfold Story__more"
        onBlur={undefined}
        onClick={[Function]}
        onFocus={undefined}
        onMouseDown={[Function]}
        onMouseEnter={undefined}
        onMouseLeave={undefined}
        onTouchStart={[Function]}
      />
      <div
        className="Story__header"
      >
        <a
          href="/@fyrstikken"
          onClick={[Function]}
        >
          <img
            alt="fyrstikken"
            className="Avatar"
            onError={[Function]}
            src="https://img.busy.org/@fyrstikken?s=40"
            style={
              Object {
                "height": "40px",
                "minWidth": "40px",
                "width": "40px",
              }
            }
          />
        </a>
        <div
          className="Story__header__text"
        >
          <a
            href="/@fyrstikken"
            onClick={[Function]}
          >
            <h4>
              fyrstikken
            </h4>
          </a>
          <span
            className="Story__date"
            onBlur={undefined}
            onClick={undefined}
            onFocus={undefined}
            onMouseDown={undefined}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onTouchStart={undefined}
          >
            <span>
              last month
            </span>
          </span>
        </div>
        <div
          className="Story__topics"
        >
          <a
            className="Topic"
            href="/trending/community-tokens"
            onClick={[Function]}
          >
            community-tokens
          </a>
        </div>
      </div>
      <div
        className="Story__content"
      >
        <a
          className="Story__content__title"
          href="/community-tokens/@fyrstikken/ned-scott-ceo-of-steemit-inc-have-a-40-minute-conversation-with-the-steemspeak-com-community"
          onClick={[Function]}
        >
          <h2>
            Ned Scott, CEO of #Steemit Inc. Have a 40 minute conversation with the SteemSpeak.com Community!
          </h2>
        </a>
        <a
          className="Story__content__preview"
          href="/community-tokens/@fyrstikken/ned-scott-ceo-of-steemit-inc-have-a-40-minute-conversation-with-the-steemspeak-com-community"
          onClick={[Function]}
        >
          <div>
            <div
              className="PostFeedEmbed"
              onClick={[Function]}
              role="presentation"
            >
              <div
                className="PostFeedEmbed__playButton"
              >
                <i
                  className="iconfont icon-group icon-playon_fill"
                />
              </div>
              <img
                alt="thumbnail"
                className="PostFeedEmbed__preview"
                src="https://i.ytimg.com/vi/YxFzGoDoLwU/hqdefault.jpg"
              />
            </div>
            <div
              className="Story__content__body"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Lots of good stuff for STEEM as he talks about Community Tokens / User Issued Tokens &amp; B2B Solutions, the Linear Reward Curve and many …",
                }
              }
            />
          </div>
        </a>
      </div>
      <div
        className="Story__footer"
      >
        <div
          className="StoryFooter"
        >
          <div
            className="StoryFooter__actions"
          >
            <span
              className="Payout"
            >
              <span
                className=""
                onBlur={undefined}
                onClick={undefined}
                onFocus={undefined}
                onMouseDown={undefined}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onTouchStart={undefined}
              >
                <span>
                  $737.54
                </span>
              </span>
            </span>
            <div
              className="Buttons"
            >
              <a
                className="Buttons__link"
                onBlur={undefined}
                onClick={[Function]}
                onFocus={undefined}
                onMouseDown={undefined}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onTouchStart={undefined}
                role="presentation"
              >
                <i
                  className="iconfont icon-praise_fill"
                />
              </a>
              <span
                className="Buttons__number Buttons__reactions-count"
                onClick={[Function]}
                role="presentation"
              >
                <span
                  onBlur={undefined}
                  onClick={undefined}
                  onFocus={undefined}
                  onMouseDown={undefined}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onTouchStart={undefined}
                >
                  <span>
                    658
                  </span>
                  <span />
                </span>
              </span>
              <a
                className="Buttons__link"
                href="/community-tokens/@fyrstikken/ned-scott-ceo-of-steemit-inc-have-a-40-minute-conversation-with-the-steemspeak-com-community#comments"
                onBlur={undefined}
                onClick={[Function]}
                onFocus={undefined}
                onMouseDown={undefined}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onTouchStart={undefined}
              >
                <i
                  className="iconfont icon-message_fill"
                />
              </a>
              <span
                className="Buttons__number"
              >
                <span>
                  57
                </span>
              </span>
              <a
                className="Buttons__link"
                onBlur={undefined}
                onClick={[Function]}
                onFocus={undefined}
                onMouseDown={undefined}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onTouchStart={undefined}
                role="presentation"
              >
                <i
                  className="iconfont icon-share1 Buttons__share"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Story Story loading 1`] = `
<div
  style={
    Object {
      "background": "#f9f9f9",
      "padding": "40px",
    }
  }
>
  <div
    className="StoryLoading"
  >
    <div
      className="StoryLoading__header"
    >
      <p
        className="StoryLoading__header__avatar ant-card-loading-block"
      />
      <div
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <div>
          <p
            className="ant-card-loading-block"
            style={
              Object {
                "width": "44%",
              }
            }
          />
        </div>
        <p
          className="ant-card-loading-block"
          style={
            Object {
              "width": "15%",
            }
          }
        />
      </div>
    </div>
    <div
      className="StoryLoading__content"
    >
      <p
        className="ant-card-loading-block"
        style={
          Object {
            "width": "94%",
          }
        }
      />
      <p>
        <span
          className="ant-card-loading-block"
          style={
            Object {
              "width": "28%",
            }
          }
        />
        <span
          className="ant-card-loading-block"
          style={
            Object {
              "width": "62%",
            }
          }
        />
      </p>
      <p>
        <span
          className="ant-card-loading-block"
          style={
            Object {
              "width": "22%",
            }
          }
        />
        <span
          className="ant-card-loading-block"
          style={
            Object {
              "width": "66%",
            }
          }
        />
      </p>
      <p>
        <span
          className="ant-card-loading-block"
          style={
            Object {
              "width": "56%",
            }
          }
        />
        <span
          className="ant-card-loading-block"
          style={
            Object {
              "width": "39%",
            }
          }
        />
      </p>
      <p>
        <span
          className="ant-card-loading-block"
          style={
            Object {
              "width": "21%",
            }
          }
        />
        <span
          className="ant-card-loading-block"
          style={
            Object {
              "width": "15%",
            }
          }
        />
        <span
          className="ant-card-loading-block"
          style={
            Object {
              "width": "40%",
            }
          }
        />
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Topic selector Topic selector 1`] = `
<div
  style={
    Object {
      "background": "#f9f9f9",
      "padding": "40px",
    }
  }
>
  <div
    className="TopicSelector"
  >
    <div
      className="TopicSelector__topics"
    >
      <a
        className="Topic"
        href="/trending/photography"
        onClick={[Function]}
      >
        photography
      </a>
      <a
        className="Topic"
        href="/trending/travel"
        onClick={[Function]}
      >
        travel
      </a>
    </div>
    <div
      className="TopicSelector__sort"
    >
      <span>
        Sort by
      </span>
      <span
        className="TopicSelector__sort__current"
        onBlur={undefined}
        onClick={[Function]}
        onFocus={undefined}
        onMouseDown={[Function]}
        onMouseEnter={undefined}
        onMouseLeave={undefined}
        onTouchStart={[Function]}
      >
        <span>
          Trending
        </span>
        <i
          className="iconfont icon-unfold"
        />
      </span>
    </div>
  </div>
</div>
`;
